Closed Bug 1676509 Opened 5 years ago Closed 5 years ago

VoiceOver read-all reads links in list twice

Categories

(Core :: Disability Access APIs, defect, P1)

All
macOS
defect

Tracking

()

VERIFIED FIXED
84 Branch
Tracking Status
firefox84 --- verified

People

(Reporter: eeejay, Assigned: eeejay)

Details

(Whiteboard: [mac2020_2])

Attachments

(1 file)

STR:

  1. Load data:text/html,<ul style="list-style: none;"><li><a href="#">The arts</a></li><li><a href="#">Biography</a></li><li><a href="#">Geography</a></li></ul>
  2. Press VO+a to read document

Result:
Each link is read twice: once the link's container, and next the link.

Expected:
VO should go from one link to the next

This is because the list item groups have titles when they should not.

Pushed by eisaacson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/4fd34f1634f4 Remove AXTitle from list item groups. r=morgan
Summary: VoiceOVer read-all reads links in list twice → VoiceOver read-all reads links in list twice
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
Flags: qe-verify+

For some reason the test case shows as empty in the page(even on other browsers).
Managed to get it working with something different, and confirmed with Marco that it would be ok as it appeared to not be limited only at links as per initial report. This patch seems to clear it nicely.

Test case:

  • data:text/html, <ul><li>Coffee</li><li>Tea</li><li>Milk</li></ul>

Confirmed issue with 83.0 on macOS 11.0.1.
Verified fix with 84.0b3, 85.0a1 (2020-11-20).

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: