Bug 1676509 - Remove AXTitle from list item groups. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D96632